# tests-service

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix  flake.nix.b  readme.md  shell.nix
assets/: main.css
src/: main.rs
