[package]
name = "tests-service"
version = "0.1.0"
authors = ["Roy Dumblauskas <roydumblauskas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-liveview = { version = "^0.6.0-rc.0", optional = true }
dioxus-ssr = { version = "^0.6.0-rc.0", optional = true }
dioxus-isrg = { version = "^0.6.0-rc.0", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:dioxus-liveview", "dep:dioxus-ssr", "dep:dioxus-isrg"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

